feat: implement feature-based architecture with navigation, theming, and internationalization

--- a/src/shared/lib/i18n/translations/en.json
+++ b/src/shared/lib/i18n/translations/en.json
@@ -21,6 +21,12 @@
     "privacy": "Privacy Policy",
     "terms": "Terms of Use"
   },
+  "themes": {
+    "light": "Light",
+    "dark": "Dark",
+    "lightDescription": "Light theme with blue accents",
+    "darkDescription": "Dark theme with purple accents"
+  },
   "languages": {
     "ru": "Русский",
     "en": "English",
