--- a/src/shared/lib/i18n/translations/kk.json
+++ b/src/shared/lib/i18n/translations/kk.json
@@ -21,6 +21,12 @@
     "privacy": "Құпиялылық саясаты",
     "terms": "Пайдалану шарттары"
   },
+  "themes": {
+    "light": "Жарық",
+    "dark": "Қараңғы",
+    "lightDescription": "Көк акценттермен жарық тақырып",
+    "darkDescription": "Күлгін акценттермен қараңғы тақырып"
+  },
   "languages": {
     "ru": "Русский",
     "en": "English",
