--- a/src/shared/lib/i18n/translations/ru.json
+++ b/src/shared/lib/i18n/translations/ru.json
@@ -21,6 +21,12 @@
     "privacy": "Политика конфиденциальности",
     "terms": "Условия использования"
   },
+  "themes": {
+    "light": "Светлая",
+    "dark": "Темная",
+    "lightDescription": "Светлая тема с синими акцентами",
+    "darkDescription": "Темная тема с фиолетовыми акцентами"
+  },
   "languages": {
     "ru": "Русский",
     "en": "English",
