--- a/src/shared/lib/i18n/translations/uk.json
+++ b/src/shared/lib/i18n/translations/uk.json
@@ -21,6 +21,12 @@
     "privacy": "Політика конфіденційності",
     "terms": "Умови використання"
   },
+  "themes": {
+    "light": "Світла",
+    "dark": "Темна",
+    "lightDescription": "Світла тема з синіми акцентами",
+    "darkDescription": "Темна тема з фіолетовими акцентами"
+  },
   "languages": {
     "ru": "Русский",
     "en": "English",
