feat: Major UI improvements and navigation refactoring
- Convert habit modals to full-screen navigation screens
- Add stack navigation for habits (Create, Edit, Color/Icon screens)
- Fix habit icon display in main list and today screen
- Improve tab bar positioning for different Android navigation types
- Add horizontal padding to today screen habit list
- Reduce card sizes and spacing for better UX
- Fix bottom sheet state updates for calendar habits
- Add translations for 'My Habits' title in all languages
- Update habit store to support icon field
- Improve form spacing and button positioning
- Add proper SafeAreaView handling for different screen types

--- a/src/shared/lib/i18n/translations/kk.json
+++ b/src/shared/lib/i18n/translations/kk.json
@@ -34,6 +34,7 @@
     "kk": "Қазақша"
   },
   "habits": {
+    "title": "Менің дағдыларым",
     "morningExercise": "Таңғы жаттығу",
     "morningExerciseDesc": "15 минут жаттығу",
     "reading": "Оқу",
