--- a/src/shared/lib/i18n/translations/en.json
+++ b/src/shared/lib/i18n/translations/en.json
@@ -21,6 +21,46 @@
     "privacy": "Privacy Policy",
     "terms": "Terms of Use"
   },
+  "profile": {
+    "title": "Profile",
+    "app": "Application",
+    "account": "Account",
+    "about": "About",
+    "notAuthenticated": "Not authenticated",
+    "registerNow": "Register now?",
+    "editProfile": "Edit profile",
+    "editProfileSubtitle": "Change personal data",
+    "notifications": "Notifications",
+    "notificationsSubtitle": "Reminder settings",
+    "theme": "Theme",
+    "themeSubtitle": "Dark theme",
+    "version": "Version"
+  },
+  "auth": {
+    "welcome": "Welcome",
+    "chooseMethod": "Choose authentication method",
+    "emailAuth": "Email",
+    "emailAuthSubtitle": "Sign in with email and password",
+    "googleAuth": "Google",
+    "googleAuthSubtitle": "Quick authentication with Google",
+    "createAccount": "Create account",
+    "signIn": "Sign in",
+    "register": "Register",
+    "firstName": "First name",
+    "firstNamePlaceholder": "Enter your first name",
+    "lastName": "Last name",
+    "lastNamePlaceholder": "Enter your last name",
+    "email": "Email",
+    "emailPlaceholder": "Enter your email",
+    "password": "Password",
+    "passwordPlaceholder": "Enter password",
+    "confirmPassword": "Confirm password",
+    "confirmPasswordPlaceholder": "Repeat password",
+    "alreadyHaveAccount": "Already have an account?",
+    "dontHaveAccount": "Don't have an account?",
+    "registrationSuccess": "Registration successful",
+    "registrationSuccessMessage": "Your account has been created successfully!"
+  },
   "themes": {
     "light": "Light",
     "dark": "Dark",
@@ -34,13 +74,35 @@
     "kk": "Қазақша"
   },
   "habits": {
+    "title": "My Habits",
     "morningExercise": "Morning Exercise",
     "morningExerciseDesc": "15 minutes of exercises",
     "reading": "Reading",
     "readingDesc": "30 minutes a day",
     "health": "Health",
     "learning": "Learning",
-    "general": "General"
+    "general": "General",
+    "createHabit": "New Habit",
+    "editHabit": "Edit Habit",
+    "colorAndIcon": "Color and Icon",
+    "habitName": "Name",
+    "habitNamePlaceholder": "Enter habit name",
+    "habitDescription": "Description",
+    "habitDescriptionPlaceholder": "Habit description (optional)",
+    "habitCategory": "Category",
+    "habitCategoryPlaceholder": "Habit category",
+    "colorIconButton": "Color and Icon",
+    "cancel": "Cancel",
+    "save": "Save",
+    "delete": "Delete",
+    "done": "Done",
+    "color": "Color",
+    "icon": "Icon",
+    "deleteConfirmTitle": "Delete Habit",
+    "deleteConfirmMessage": "Are you sure you want to delete this habit?",
+    "deleteConfirmCancel": "Cancel",
+    "deleteConfirmDelete": "Delete",
+    "nameRequired": "Enter habit name"
   },
   "common": {
     "save": "Save",
@@ -54,7 +116,7 @@
     "habits": "Habits",
     "history": "History",
     "statistics": "Statistics",
-    "settings": "Settings"
+    "profile": "Profile"
   },
   "today": {
     "title": "Today",
