--- a/src/shared/lib/i18n/translations/uk.json
+++ b/src/shared/lib/i18n/translations/uk.json
@@ -34,6 +34,7 @@
     "kk": "Қазақша"
   },
   "habits": {
+    "title": "Мої звички",
     "morningExercise": "Ранкова зарядка",
     "morningExerciseDesc": "15 хвилин вправ",
     "reading": "Читання",
