--- a/src/shared/lib/i18n/translations/kk.json
+++ b/src/shared/lib/i18n/translations/kk.json
@@ -4,8 +4,6 @@
     "app": "Қолданба",
     "data": "Деректер",
     "about": "Қолданба туралы",
-    "notifications": "Хабарландырулар",
-    "notificationsSubtitle": "Еске салу баптаулары",
     "theme": "Тема",
     "themeSubtitle": "Қараңғы тема",
     "language": "Тіл",
@@ -32,8 +30,6 @@
     "tapToLogin": "Кіру үшін басыңыз",
     "editProfile": "Профильді өңдеу",
     "editProfileSubtitle": "Жеке деректерді өзгерту",
-    "notifications": "Хабарландырулар",
-    "notificationsSubtitle": "Еске сату баптаулары",
     "visualEffects": "Көрнекі эффектілер",
     "visualEffectsSubtitle": "Дағдыларды орындағандағы эффектілер",
     "theme": "Тема",
@@ -91,7 +87,32 @@
     "readingDesc": "Күніне 30 минут",
     "health": "Денсаулық",
     "learning": "Оқу",
-    "general": "Жалпы"
+    "general": "Жалпы",
+    "createHabit": "Жаңа дағды",
+    "editHabit": "Дағдыны өңдеу",
+    "colorAndIcon": "Түс және белгіше",
+    "habitName": "Атауы",
+    "habitNamePlaceholder": "Дағды атауын енгізіңіз",
+    "habitDescription": "Сипаттама",
+    "habitDescriptionPlaceholder": "Дағды сипаттамасы (міндетті емес)",
+    "habitCategory": "Санат",
+    "habitCategoryPlaceholder": "Дағды санаты",
+    "colorIconButton": "Түс және белгіше",
+    "enableReminder": "Еске салтуды қосу",
+    "reminderTimeSubtitle": "Дағдыны орындау туралы еске салту",
+    "reminderTime": "Еске салту уақыты",
+    "reminderTimePlaceholder": "Уақытты таңдаңыз",
+    "reminderError": "Еске салтуды орнату қатесі",
+    "cancel": "Болдырмау",
+    "save": "Сақтау",
+    "delete": "Жою",
+    "done": "Дайын",
+    "color": "Түс",
+    "icon": "Белгіше",
+    "deleteConfirmTitle": "Дағдыны жою",
+    "deleteConfirmMessage": "Бұл дағдыны жойғыңыз келе ме?",
+    "deleteConfirmCancel": "Болдырмау",
+    "deleteConfirmDelete": "Жою"
   },
   "common": {
     "save": "Сақтау",
@@ -196,5 +217,25 @@
     "showMonth": "Айды көрсету",
     "dragUpForMonth": "Ай көрінісі үшін жоғары тартыңыз",
     "dragDownForWeek": "Апта көрінісі үшін төмен тартыңыз"
+  },
+  "priority": {
+    "title": "Басымдық",
+    "low": "Төмен",
+    "medium": "Орташа",
+    "high": "Жоғары"
+  },
+  "categories": {
+    "title": "Санат",
+    "health": "Денсаулық",
+    "fitness": "Фитнес",
+    "learning": "Оқу",
+    "work": "Жұмыс",
+    "personal": "Жеке",
+    "social": "Әлеуметтік",
+    "hobby": "Хобби",
+    "general": "Жалпы",
+    "addCustom": "Өзін қосу",
+    "customPlaceholder": "Санат атауы",
+    "nameRequired": "Санат атауын енгізіңіз"
   }
 }
