--- a/src/shared/lib/i18n/translations/ru.json
+++ b/src/shared/lib/i18n/translations/ru.json
@@ -5,8 +5,6 @@
     "account": "Аккаунт",
     "data": "Данные",
     "about": "О приложении",
-    "notifications": "Уведомления",
-    "notificationsSubtitle": "Настройка напоминаний",
     "theme": "Тема",
     "themeSubtitle": "Темная тема",
     "language": "Язык",
@@ -20,7 +18,30 @@
     "version": "Версия",
     "versionSubtitle": "1.0.0",
     "privacy": "Политика конфиденциальности",
-    "terms": "Условия использования"
+    "terms": "Условия использования",
+    "notifications": "Уведомления",
+    "notificationsSubtitle": "Настройки уведомлений",
+    "habitReminders": "Напоминания о привычках",
+    "habitRemindersSubtitle": "Уведомления о времени выполнения привычек",
+    "dailySummary": "Ежедневный отчет",
+    "dailySummarySubtitle": "Сводка за день",
+    "motivationalMessages": "Мотивационные сообщения",
+    "motivationalMessagesSubtitle": "Вдохновляющие уведомления",
+    "syncReminders": "Напоминания о синхронизации",
+    "syncRemindersSubtitle": "Уведомления о несинхронизированных данных",
+    "notificationsUpdated": "Настройки уведомлений обновлены",
+    "updateError": "Ошибка при обновлении настроек",
+    "notificationsDisabled": "Уведомления отключены",
+    "notificationsDisabledSubtitle": "Включите уведомления в настройках устройства для использования этой функции",
+    "enableNotifications": "Включить уведомления",
+    "enableNotificationsInfo": "Перейдите в Настройки > Уведомления > Flow Max и включите уведомления",
+    "testNotification": "Тестовое уведомление",
+    "testNotificationSent": "Тестовое уведомление отправлено",
+    "testNotificationError": "Ошибка отправки тестового уведомления",
+    "allNotificationsCleared": "Все уведомления отменены",
+    "clearError": "Ошибка при отмене уведомлений",
+    "notificationTest": "Тест уведомлений",
+    "notificationTestSubtitle": "Проверка работы системы уведомлений"
   },
   "profile": {
     "title": "Профиль",
@@ -33,8 +54,6 @@
     "tapToLogin": "Нажмите для входа",
     "editProfile": "Редактировать профиль",
     "editProfileSubtitle": "Изменить личные данные",
-    "notifications": "Уведомления",
-    "notificationsSubtitle": "Настройка напоминаний",
     "visualEffects": "Визуальные эффекты",
     "visualEffectsSubtitle": "Эффекты при выполнении привычек",
     "theme": "Тема",
@@ -105,6 +124,11 @@
     "habitCategory": "Категория",
     "habitCategoryPlaceholder": "Категория привычки",
     "colorIconButton": "Цвет и иконка",
+    "enableReminder": "Включить напоминание",
+    "reminderTimeSubtitle": "Напоминание о выполнении привычки",
+    "reminderTime": "Время напоминания",
+    "reminderTimePlaceholder": "Выберите время",
+    "reminderError": "Ошибка при настройке напоминания",
     "cancel": "Отмена",
     "save": "Сохранить",
     "delete": "Удалить",
@@ -116,6 +140,26 @@
     "deleteConfirmCancel": "Отмена",
     "deleteConfirmDelete": "Удалить",
     "nameRequired": "Введите название привычки"
+  },
+  "priority": {
+    "title": "Приоритет",
+    "low": "Низкий",
+    "medium": "Средний",
+    "high": "Высокий"
+  },
+  "categories": {
+    "title": "Категория",
+    "health": "Здоровье",
+    "fitness": "Фитнес",
+    "learning": "Обучение",
+    "work": "Работа",
+    "personal": "Личное",
+    "social": "Социальное",
+    "hobby": "Хобби",
+    "general": "Общее",
+    "addCustom": "Добавить свою",
+    "customPlaceholder": "Название категории",
+    "nameRequired": "Введите название категории"
   },
   "common": {
     "save": "Сохранить",
@@ -228,6 +272,24 @@
     "select": "Выбрать",
     "confirm": "Подтвердить",
     "enabled": "Включено",
-    "disabled": "Отключено"
+    "disabled": "Отключено",
+    "granted": "Предоставлено",
+    "denied": "Отказано"
+  },
+  "days": {
+    "monday": "Понедельник",
+    "tuesday": "Вторник",
+    "wednesday": "Среда",
+    "thursday": "Четверг",
+    "friday": "Пятница",
+    "saturday": "Суббота",
+    "sunday": "Воскресенье",
+    "mon": "Пн",
+    "tue": "Вт",
+    "wed": "Ср",
+    "thu": "Чт",
+    "fri": "Пт",
+    "sat": "Сб",
+    "sun": "Вс"
   }
 }
