--- a/src/shared/lib/i18n/translations/uk.json
+++ b/src/shared/lib/i18n/translations/uk.json
@@ -4,8 +4,6 @@
     "app": "Додаток",
     "data": "Дані",
     "about": "Про додаток",
-    "notifications": "Сповіщення",
-    "notificationsSubtitle": "Налаштування нагадувань",
     "theme": "Тема",
     "themeSubtitle": "Темна тема",
     "language": "Мова",
@@ -32,8 +30,6 @@
     "tapToLogin": "Натисніть для входу",
     "editProfile": "Редагувати профіль",
     "editProfileSubtitle": "Змінити особисті дані",
-    "notifications": "Сповіщення",
-    "notificationsSubtitle": "Налаштування нагадувань",
     "visualEffects": "Візуальні ефекти",
     "visualEffectsSubtitle": "Ефекти при виконанні звичок",
     "theme": "Тема",
@@ -91,7 +87,32 @@
     "readingDesc": "30 хвилин на день",
     "health": "Здоров'я",
     "learning": "Навчання",
-    "general": "Загальне"
+    "general": "Загальне",
+    "createHabit": "Нова звичка",
+    "editHabit": "Редагувати звичку",
+    "colorAndIcon": "Колір та іконка",
+    "habitName": "Назва",
+    "habitNamePlaceholder": "Введіть назву звички",
+    "habitDescription": "Опис",
+    "habitDescriptionPlaceholder": "Опис звички (необов'язково)",
+    "habitCategory": "Категорія",
+    "habitCategoryPlaceholder": "Категорія звички",
+    "colorIconButton": "Колір та іконка",
+    "enableReminder": "Увімкнути нагадування",
+    "reminderTimeSubtitle": "Нагадування про виконання звички",
+    "reminderTime": "Час нагадування",
+    "reminderTimePlaceholder": "Оберіть час",
+    "reminderError": "Помилка налаштування нагадування",
+    "cancel": "Скасувати",
+    "save": "Зберегти",
+    "delete": "Видалити",
+    "done": "Готово",
+    "color": "Колір",
+    "icon": "Іконка",
+    "deleteConfirmTitle": "Видалити звичку",
+    "deleteConfirmMessage": "Ви впевнені, що хочете видалити цю звичку?",
+    "deleteConfirmCancel": "Скасувати",
+    "deleteConfirmDelete": "Видалити"
   },
   "common": {
     "save": "Зберегти",
@@ -196,5 +217,25 @@
     "showMonth": "Показати місяць",
     "dragUpForMonth": "Потягніть вгору для місячного виду",
     "dragDownForWeek": "Потягніть вниз для тижневого виду"
+  },
+  "priority": {
+    "title": "Пріоритет",
+    "low": "Низький",
+    "medium": "Середній",
+    "high": "Високий"
+  },
+  "categories": {
+    "title": "Категорія",
+    "health": "Здоров'я",
+    "fitness": "Фітнес",
+    "learning": "Навчання",
+    "work": "Робота",
+    "personal": "Особисте",
+    "social": "Соціальне",
+    "hobby": "Хобі",
+    "general": "Загальне",
+    "addCustom": "Додати свою",
+    "customPlaceholder": "Назва категорії",
+    "nameRequired": "Введіть назву категорії"
   }
 }
